--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,10 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: ArchiveFiles@2
+- task: CopyFiles@2
   inputs:
-    rootFolderOrFile: '$(build.sourcesDirectory)'
-    includeRootFolder: false
+    SourceFolder: '$(build.sourcesDirectory)/source'
+    Contents: '**\*'
+    TargetFolder: '$(BuildArtifactsStagingDirectory)/output'
+    
 - task: PublishBuildArtifacts@1
