--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,7 @@ steps:
     TargetFolder: '$(BuildArtifactsStagingDirectory)/output'
     
 - task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
