Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
   inputs:
     SourceFolder: '$(build.sourcesDirectory)/source'
     Contents: '**\*'
-    TargetFolder: '$(BuildArtifactsStagingDirectory)/output'
+    TargetFolder: '$(Build.ArtifactsStagingDirectory)/output'
     
 - task: PublishBuildArtifacts@1
   inputs:
