--- a/deployment/azure-pipelines.yml
+++ b/deployment/azure-pipelines.yml
@@ -4,17 +4,22 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: "ubuntu-latest"
 
 steps:
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: '$(build.sourcesDirectory)/source'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/output'
-    
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+  - task: CopyFiles@2
+    inputs:
+      SourceFolder: "$(build.sourcesDirectory)/source"
+      TargetFolder: "$(Build.ArtifactStagingDirectory)/output"
+
+  - task: CopyFiles@2
+    inputs:
+      SourceFolder: "$(build.sourcesDirectory)/deployment"
+      TargetFolder: "$(Build.ArtifactStagingDirectory)/deployment"
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: "$(Build.ArtifactStagingDirectory)"
