Update azure-pipelines with names for copy tasks

--- a/deployment/azure-pipelines.yml
+++ b/deployment/azure-pipelines.yml
@@ -11,11 +11,13 @@ pool:
 
 steps:
   - task: CopyFiles@2
+  displayName: 'Copy source files'
     inputs:
       SourceFolder: "$(build.sourcesDirectory)/source"
       TargetFolder: "$(Build.ArtifactStagingDirectory)/output"
 
   - task: CopyFiles@2
+  displayName: 'Copy deployment files'
     inputs:
       SourceFolder: "$(build.sourcesDirectory)/deployment"
       TargetFolder: "$(Build.ArtifactStagingDirectory)/deployment"
